# jenkins-pytest-github

./: Jenkinsfile  pyproject.toml
src/: calc_class.py
tests/: test_calc_class.py
