[tool.poetry]
name = "jenkins-pytest-github"
version = "0.1.0"
description = ""
authors = ["sameer-xylem <sameer@xylem.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
